adicionei uma div fixa na pagina com cor e mensagem  principal

--- a/pagina2/style.css
+++ b/pagina2/style.css
@@ -40,7 +40,8 @@ body {
 
 .border {
     border: 2px solid red;
-} 
+}
+
 /* usar para entender tamanho dos elementos */
 
 .sidebar {
@@ -50,7 +51,7 @@ body {
     flex-direction: column;
     align-items: flex-start;
     width: 240px;
-    height: 100%;   
+    height: 100%;
     background-color: #B19877;
 }
 
@@ -86,36 +87,50 @@ body {
     color: white;
     cursor: pointer;
     /* pointer serve para simbolizar que é um link */
-    text-align: left;     
+    text-align: left;
 }
 
-.sidebar button > span {
-/* dentro de um botao, diretamente no Filho que tenha um span */
+.sidebar button>span {
+    /* dentro de um botao, diretamente no Filho que tenha um span */
     display: inline-flex;
     align-items: center;
-    gap: 12px; 
+    gap: 12px;
     /* espaçamento entre o icone e o texto */
-    height: 48px; 
+    height: 48px;
     padding: 0 16px 0 23px;
     /* o padding alinhou os itens no centro */
     border-radius: 25px;
     transition: 0.2s;
     /* transição quando passa o mouse no botão */
-    margin-left: 15px; /*afastar o botão da lateral esquerda */
+    margin-left: 15px;
+    /*afastar o botão da lateral esquerda */
     margin-top: 15px;
 }
 
 /*essa classe serve para quando passar o mouse em cima, dar um fundo diferente  */
 /* aqui embaixo significa: dentro do botão, temos o span */
-.sidebar button:hover > span {
-background-color: #d2bc9f;
+.sidebar button:hover>span {
+    background-color: #d2bc9f;
 }
 
 
 .main {
-    margin-left: 250px; /* o tamanho da sidebar é 240px, logo, 10 pixels de respiro */
-    margin-right: 6px;
-    /* overflow: hidden; ???? */
+    margin-left: 240px;
+    /* o tamanho da sidebar é 240px, logo, 240px de margem a esquerda*/
+   overflow: hidden;
+}
 
-    
+.barraBoasVindas {
+    background-color: #DCC495;
+    width: 100%;
+    height: 60px;
+}
+
+.boxTexto>span {
+    display: flex;
+    justify-content: center;
+    color: white;
+    font-family: 'Montserrat';
+    font-size: 20px;
+    padding: 20px;
 }
