--- a/pagina2/style.css
+++ b/pagina2/style.css
@@ -134,3 +134,67 @@ body {
     font-size: 20px;
     padding: 20px;
 }
+
+.BoxNovaEntrada {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-left: 90px;
+    margin-top: 100px;
+
+}
+
+.caixaNovaEntrada {
+    background-color: #E5D1A9;
+    width: 900px;
+    height: 600px;
+}
+
+.boxTituloNovaEntrada {
+    width: 100%;
+    height: 80px;
+    background-color: #CEB98E;
+}
+
+.boxTituloNovaEntrada > span {
+    color: white;
+    font-family: 'Montserrat';
+    font-size: 25px;
+    font-style: normal;    
+    line-height: normal;
+    display: flex;
+    justify-content: center; 
+    padding: 20px;    
+}
+
+.tituloDiario {
+    margin-left: 40px;
+    margin-top: 20px;
+}
+
+.tituloDiario > span {
+    color: white;
+    font-family: 'Montserrat';
+    font-size: 25px;    
+
+}
+
+#input_tituloDiario {
+    background-color: #CEB98E;
+    border: none;
+    width: 800px;
+    height: 30px;
+}
+
+.caixaConteudo > label {
+    color: white;
+    font-family: 'Montserrat';
+    font-size: 25px;    
+}
+
+#conteudoDiario {
+    background-color: #CEB98E;
+    border: none;
+    width: 800px;
+    height: 350px;
+}
