--- a/Cadastro/style.css
+++ b/Cadastro/style.css
@@ -1,6 +1,11 @@
 @font-face {
     font-family: 'WorkSans';
-    src: url(WorkSans-VariableFont_wght.ttf);
+    src: url(Fontes/WorkSans-VariableFont_wght.ttf);
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url(Fontes/Montserrat-VariableFont_wght.ttf);
 }
 
 * {
@@ -12,13 +17,14 @@
 	display: flex;
     flex-direction: row;
     justify-content: flex-end;
-	margin-top: 30px;
+	margin-top: 14.5px;
 	margin-right: 100px;   
 }
 
 .navbar p {
     padding: 5px;
     margin-left: 90px;
+	cursor: pointer;
 }
 
 body {
@@ -35,7 +41,7 @@ h1 {
 	font-weight: 700;
 	line-height: normal;
 	text-align: center;
-	margin: 5px
+	margin: 5px;
 }
 
 h2 {
@@ -85,5 +91,6 @@ h2 {
 	border-radius: 8px;
     margin: 19px;
     font-family: 'WorkSans';
+	cursor: pointer;
 
 }
