--- a/Login/style.css
+++ b/Login/style.css
@@ -29,7 +29,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;	
-	margin: 150px;
+	margin: 180px;
 
 
 }
@@ -98,6 +98,11 @@ h5 {
 	font-weight: 400;
 	line-height: normal;
 
+}
+
+.corCrie {
+	cursor: pointer;
+	color: #caa06c;
 }
 
 #botaoLogar {	
