alterei o botão do quizz e adicionei o botão do salvar no diario

--- a/api/site/public/css/styleDiario.css
+++ b/api/site/public/css/styleDiario.css
@@ -230,16 +230,6 @@ body {
     margin-top: 10px;
 }
 
-.botaoSalvar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.botaoSalvar>span {
-    color: black;
-    font-family: 'Poppins';
-}
 
 .caixaBuscar {
     font-family: 'Poppins';
@@ -275,4 +265,21 @@ body {
      margin-left: 60px;     
      margin-top: 190px;
      cursor: pointer;
+}
+
+.boxBotao>button {
+    margin-top: 10px;
+    font-family: 'Montserrat';
+    cursor: pointer;
+    border: none;
+    border-radius: 10px;
+    width: 100px;
+    height: 40px;   
+    background-color: #dbcfca;
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
+}
+
+.boxBotao {
+    display: flex;
+    justify-content: center;
 }
