--- a/api/site/public/css/style.css
+++ b/api/site/public/css/style.css
@@ -30,7 +30,7 @@
 
 body {
     margin: 0;
-    background-color: #9E8466;   
+    background-color: #9E8466;
 
 }
 
@@ -90,7 +90,7 @@ body {
 }
 
 .banner {
-     width: 100%;
+    width: 100%;
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
@@ -112,7 +112,7 @@ body {
 }
 
 .flexboxElena {
- margin-left: 40px;
+    margin-left: 40px;
 }
 
 .recipienteDiario h2 {
@@ -130,7 +130,7 @@ body {
     font-weight: 400;
     text-align: left;
     letter-spacing: 0.8px;
-   
+
 }
 
 .imgElenaDiario {
@@ -157,10 +157,10 @@ body {
 
 .ondaPagina {
     position: relative;
-    
-  }
-  
-  .ondaPagina p {
+
+}
+
+.ondaPagina p {
     position: absolute;
     top: 65%;
     left: 0;
@@ -168,12 +168,21 @@ body {
     text-align: center;
     font-size: 30px;
     text-transform: uppercase;
-    margin-left: 150px;       
-  }
-  
-  .ondaPagina img {
+    margin-left: 150px;
+}
+
+.ondaPagina img {
     width: 100%;
-  }
+}
+
+.cadastre>p {
+    left: 60%;
+    font-size: 40px;
+}
+
+.borda {
+    border: 4px solid red;
+}
 
 .conteudo1 {
     background-color: #443527;
@@ -184,7 +193,7 @@ body {
 .ondaPagina {
     display: flex;
     justify-content: center;
-   
+
 }
 
 .ondaMarrom {
@@ -475,7 +484,7 @@ p {
 
 .linhaTitulo {
     width: 465px;
-    border: 2px solid #8e8e8e;    
+    border: 2px solid #8e8e8e;
     margin-top: 0px;
     margin-bottom: 30px;
 
@@ -483,7 +492,7 @@ p {
 
 .linhaTitulo2 {
     width: 1100px;
-    border: 2px solid #8e8e8e;  
+    border: 2px solid #8e8e8e;
     /* margin-left: 180px; */
     margin-top: 0px;
     margin-bottom: 30px;
@@ -515,7 +524,7 @@ p {
     height: 150px;
     width: 150px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
-    transition: transform 0.4s; 
+    transition: transform 0.4s;
     /* o transition faz a imagem demorar um pouco para chegar no hover aqui embaixo */
 }
 
@@ -633,7 +642,7 @@ p {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    transition: transform 0.4s; 
+    transition: transform 0.4s;
     /* o transition faz o texto demorar um pouco para chegar no hover aqui embaixo */
 }
 
@@ -641,7 +650,7 @@ p {
 .conteudo6 p:hover {
     transform: scale(1.2);
     text-shadow: 2px 10px 10px rgb(145, 143, 143);
-    
+
 }
 
 .linhaValores {
@@ -668,7 +677,7 @@ p {
     width: 900px;
     font-weight: 400;
     font-size: 16px;
-    
+
     line-height: 26px;
     font-style: normal;
     letter-spacing: 0.10px;
@@ -679,7 +688,7 @@ p {
 /* PARTE DO SOBRE MIM */
 .boxSobreMim {
     display: flex;
-    justify-content: center;    
+    justify-content: center;
 }
 
 .border {
@@ -691,15 +700,15 @@ p {
     width: 500px;
     margin-left: 40px;
     margin-bottom: 60px;
-  }
-  
+}
+
 .imagem {
     display: block;
     width: 100%;
     height: auto;
     border-radius: 50%;
-  }
-  
+}
+
 .overlay {
     position: absolute;
     top: 0;
@@ -709,9 +718,9 @@ p {
     height: 100%;
     width: 100%;
     opacity: 0;
-    transition: .5s ease;  
+    transition: .5s ease;
 }
-  
+
 .fotoSobreMim:hover .overlay {
     opacity: 1;
 }
@@ -732,5 +741,5 @@ p {
     text-align: center;
     margin: 20px;
     font-size: 15px;
-    
+
 }
