--- a/api/site/public/css/styleDiario.css
+++ b/api/site/public/css/styleDiario.css
@@ -275,8 +275,9 @@ body {
     border-radius: 10px;
     width: 100px;
     height: 40px;   
-    background-color: #dbcfca;
+    background-color: #735944;
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
+    color: white;
 }
 
 .boxBotao {
