--- a/api/site/public/css/styleQuiz.css
+++ b/api/site/public/css/styleQuiz.css
@@ -228,7 +228,7 @@ body {
     border-radius: 10px;
     width: 100px;
     height: 40px;   
-    background-color: #dbcfca;
+    background-color: #735944;
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
 }
 
