--- a/api/site/public/css/styleQuiz.css
+++ b/api/site/public/css/styleQuiz.css
@@ -230,6 +230,7 @@ body {
     height: 40px;   
     background-color: #735944;
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
+    color: white;
 }
 
 .boxBotao {
