adicionei novas entradas na caixa de diários antigos, sem estilizacao final

--- a/api/site/public/css/styleDashboard.css
+++ b/api/site/public/css/styleDashboard.css
@@ -232,7 +232,7 @@ body {
 }
 
 .boxParametrosDiarios {
-    background-color: #e4c9a6;
+    background-color: #f4e3cd;
     border-radius: 10px;
     width: 400px;
     height: 80px;
