--- a/api/site/public/css/styleDiario.css
+++ b/api/site/public/css/styleDiario.css
@@ -143,8 +143,16 @@ body {
     align-items: flex-start;
     margin-left: 90px;
     margin-top: 70px;
-    
 
+
+}
+
+.entradasAntigas>span {
+    font-family: 'Montserrat';
+    display: flex;
+    align-items: center;
+    padding: 2px 16px 40px 23px;
+    justify-content: center;
 }
 
 .caixaNovaEntrada {
@@ -208,13 +216,14 @@ body {
 .caixaConteudo>label {
     color: white;
     font-family: 'Montserrat';
-    font-size: 20px;      
+    font-size: 20px;
 }
 
 .caixaConteudo textarea {
-    resize: none  !important;
+    resize: none !important;
     /* coloquei o importante para impedir que o usuário consiga redimensionar a caixa de texto */
-    outline: none; /* remove a borda padrão quando clica */
+    outline: none;
+    /* remove a borda padrão quando clica */
 }
 
 /* .caixaConteudo textarea:focus {
@@ -239,32 +248,33 @@ body {
     margin-left: 30px;
 }
 
-.caixaBuscar > span, .calendarioBox > span {
+.caixaBuscar>span,
+.calendarioBox>span {
     font-family: 'Montserrat';
 }
 
 #input_buscar {
     border: none;
     width: 260px;
-    height: 30px;    
-    
+    height: 30px;
+
 }
 
 .calendarioBox {
     margin-top: 15px;
 }
 
-.deslogar > span {
+.deslogar>span {
     color: white;
     font-family: 'Montserrat';
-     display: flex;
-     align-items: flex-end;
-     height: 48px;
-     padding: 0 16px 0 23px;
-     /* o padding alinhou os itens no centro */
-     margin-left: 60px;     
-     margin-top: 190px;
-     cursor: pointer;
+    display: flex;
+    align-items: flex-end;
+    height: 48px;
+    padding: 0 16px 0 23px;
+    /* o padding alinhou os itens no centro */
+    margin-left: 60px;
+    margin-top: 190px;
+    cursor: pointer;
 }
 
 .boxBotao>button {
@@ -274,7 +284,7 @@ body {
     border: none;
     border-radius: 10px;
     width: 100px;
-    height: 40px;   
+    height: 40px;
     background-color: #735944;
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
     color: white;
