--- a/api/site/public/css/styleDiario.css
+++ b/api/site/public/css/styleDiario.css
@@ -90,8 +90,7 @@ body {
     text-align: left;
 }
 
-.sidebar button>span {
-    /* dentro de um botao, diretamente no Filho que tenha um span */
+.sidebar button>span {  
     display: inline-flex;
     align-items: center;
     gap: 12px;
@@ -150,9 +149,15 @@ body {
 .entradasAntigas>span {
     font-family: 'Montserrat';
     display: flex;
-    align-items: center;
-    padding: 2px 16px 40px 23px;
+    align-items: center;    
+    padding: 10px 17px 26px 23px;   
     justify-content: center;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.entradasAntigas:hover>span {
+    background-color: #d2bc9f;
 }
 
 .caixaNovaEntrada {
@@ -288,7 +293,7 @@ body {
     background-color: #735944;
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
     color: white;
-}
+    }
 
 .boxBotao {
     display: flex;
