--- a/api/site/public/css/styleCadastro.css
+++ b/api/site/public/css/styleCadastro.css
@@ -1,12 +1,3 @@
-@font-face {
-    font-family: 'WorkSans';
-    src: url(Fontes/WorkSans-VariableFont_wght.ttf);
-}
-
-@font-face {
-    font-family: 'Montserrat';
-    src: url(Fontes/Montserrat-VariableFont_wght.ttf);
-}
 
 * {
     color: white;
@@ -60,8 +51,8 @@ h2 {
 	background-color: #B6A281;
 	border: none;
 	padding-bottom: 1px;
-	width: 408px;
-	height: 55px;
+	width: 398px;
+	height: 49px;
 	border-radius: 20px;
     margin: 10px;
 }
@@ -75,9 +66,10 @@ h2 {
     display: flex;    
     align-items: center;
     flex-direction: column;   
+	margin-top: 30px;
 }
 
-#botaoCadastrar {	
+.botaoCadastrar {	
 	background-color: #552424;
 	border: none;
 	color: white;
@@ -90,5 +82,11 @@ h2 {
     margin: 19px;
     font-family: 'WorkSans';
 	cursor: pointer;
+}
 
+.botaoCadastrar:hover {
+	background-color: #673232;
+	transition-duration: 1s;
+	cursor: pointer;
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
