--- a/api/site/public/css/styleQuiz.css
+++ b/api/site/public/css/styleQuiz.css
@@ -57,7 +57,7 @@ body {
 
 .sidebarMarrom {
     background-color: #584634;
-    height: 300px;
+    height: 233px;
     width: 240px;
     display: flex;
     justify-content: center;
@@ -238,15 +238,20 @@ body {
     justify-content: center;
 }
 
-.deslogar > span {
+.deslogar > span {   
+    display: flex;
+    align-items: flex-end;
+    height: 48px;
+    padding: 0 16px 0 23px;
+    /* o padding alinhou os itens no centro */     
+}
+
+.caixaDeslogar {
+    cursor: pointer;
     color: white;
     font-family: 'Montserrat';
-     display: flex;
-     align-items: flex-end;
-     height: 48px;
-     padding: 0 16px 0 23px;
-     /* o padding alinhou os itens no centro */
-     margin-left: 60px;     
-     margin-top: 350px;
-     cursor: pointer;
+    margin-left: 70px;     
+    margin-top: 188px;
+    padding: 0 16px 0 23px;
+
 }
