--- a/site/public/css/styleCadastro.css
+++ b/site/public/css/styleCadastro.css
@@ -1,28 +1,27 @@
-
 * {
-    color: white;
+	color: white;
 	font-family: "Montserrat";
 }
 
 .navbar {
 	display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+	flex-direction: row;
+	justify-content: flex-end;
 	margin-top: 14.5px;
-	margin-right: 100px;   
+	margin-right: 100px;
 }
 
 .navbar p {
-    padding: 5px;
-    margin-left: 90px;
+	padding: 5px;
+	margin-left: 90px;
 	cursor: pointer;
 }
 
-body {	
+body {
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
-}	
+}
 
 h1 {
 	font-family: "Montserrat";
@@ -44,32 +43,33 @@ h2 {
 }
 
 .campoDeDados {
-    color: white;
+	color: white;
 	font-family: "Montserrat";
 	font-size: 14px;
 	font-style: normal;
 	background-color: #B6A281;
-	border: none;
-	padding-bottom: 1px;
+	border: none;	
 	width: 398px;
 	height: 49px;
 	border-radius: 20px;
-    margin: 10px;
+	margin: 10px;
+	padding-left: 20px;
+	outline: none;
 }
 
 .campoDeDados::placeholder {
-    color: white;
-    padding: 15px;
+	color: white;
+	
 }
 
 .flexbox {
-    display: flex;    
-    align-items: center;
-    flex-direction: column;   
+	display: flex;
+	align-items: center;
+	flex-direction: column;
 	margin-top: 30px;
 }
 
-.botaoCadastrar {	
+.botaoCadastrar {
 	background-color: #552424;
 	border: none;
 	color: white;
@@ -77,10 +77,9 @@ h2 {
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 16px;
+	font-size: 15px;
 	border-radius: 8px;
-    margin: 19px;
-    font-family: 'WorkSans';
+	margin: 19px;	
 	cursor: pointer;
 }
 
@@ -88,53 +87,53 @@ h2 {
 	background-color: #673232;
 	transition-duration: 1s;
 	cursor: pointer;
-	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .login {
-    height: var(--tamanho-login);
-    background-image: url('../assets/imgs/bg-jelly-fish-para-home.png');
-    background-size: cover;
+	height: var(--tamanho-login);
+	background-size: cover;
 }
 
 .login .container {
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
 }
 
 .card_erro {
-    display: none;
-    background-color: #fff;
-    color: black;
-    width: 230px;
-    position: fixed;
-    border-radius: 4px;
-    border: #e6005a 3px solid;
-    padding: 10px;
-    margin-right: 10%;
+	display: none;
+	background-color: rgba(0, 0, 0, 0.514);
+	color: white;
+	width: 230px;
+	position: fixed;
+	border-radius: 4px;
+	border: #000000 1px solid;
+	padding: 10px;
+	margin-right: 10%;
+	font-family: 'Montserrat';
 }
 
 .card_erro #mensagem_erro {
-    font-weight: 500;
-    font-size: 20px;
+	font-weight: 500;
+	font-size: 13px;
 }
 
-.loading-div {
-    width: 50px;
-    display: none;
+.loading-div {	
+	width: 50px;
+	display: none;
 }
 
 .loading-div img {
-    height: 50px;
-    width: 50px;
+	height: 50px;
+	width: 50px;
 }
 
 #div_erros_login {
-    display: none
+	display: none
 }
 
 .alerta_erro {
-    display: flex;
-    justify-content: flex-end;
+	display: flex;
+	justify-content: flex-end;
 }
