--- a/site/public/css/styleQuiz.css
+++ b/site/public/css/styleQuiz.css
@@ -202,6 +202,19 @@ body {
     
 }
 
+.textoQuiz {
+    font-family: 'Montserrat';
+    text-align: center;
+    margin-top: 25px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+   
+    
+}
+
 .boxImagemQuiz {
     display: flex;
     justify-content: center;
