--- a/site/public/css/styleQuiz.css
+++ b/site/public/css/styleQuiz.css
@@ -265,3 +265,39 @@ body {
     padding: 0 16px 0 23px;
 
 }
+
+.boxQuiz {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 85px;
+    margin-left: 58px;
+    margin-right: 58px;
+}
+
+.boxQuestoes {
+    margin-top: 40px;
+}
+
+.boxPergunta {
+    margin-top: 20px;
+
+}
+.sessaoQuiz{  
+    font-size: 20px;
+    font-family: 'Montserrat';
+}
+
+.botaoProxima {
+    margin-top: 5px;
+    font-family: 'Montserrat';
+    cursor: pointer;
+    border: none;
+    border-radius: 10px;
+    width: 138px;
+    height: 40px;   
+    background-color: #735944;
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
+    color: white;
+}
