--- a/site/public/css/styleQuiz.css
+++ b/site/public/css/styleQuiz.css
@@ -266,10 +266,7 @@ body {
 
 }
 
-.boxQuiz {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.boxQuiz { 
     text-align: center;
     margin-top: 85px;
     margin-left: 58px;
@@ -301,3 +298,16 @@ body {
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
     color: white;
 }
+
+.respostasQuiz {
+   
+    margin-top: 48px;
+    font-family: 'Montserrat';
+    font-size: 20px;
+    text-align: center;
+}
+
+.botaoQuiz{
+    margin-top: 75px;
+}
+
