arrumei erro do login, conectei bd no salvar diario

--- a/site/public/css/styleDiario.css
+++ b/site/public/css/styleDiario.css
@@ -73,10 +73,12 @@ body {
 
 .imagemPerfil {
     width: 170px;
+    margin-left: 20px;
 }
 
 .sidebar p {
     text-align: center;
+    font-size: 18px;
 }
 
 .sidebar button {
