--- a/site/public/css/styleDiario.css
+++ b/site/public/css/styleDiario.css
@@ -177,6 +177,11 @@ body {
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
 }
 
+.entradasAntigas{
+    height: 220px;
+    overflow-y: auto;
+}
+
 .boxTituloNovaEntrada {
     width: 100%;
     height: 80px;
@@ -239,7 +244,9 @@ body {
     
 }
 
-
+.caixaConteudo > labelfor { 
+    color: white;
+}
 #conteudoDiario {
     background-color: #E9D5B9;
     border: none;
@@ -297,15 +304,21 @@ body {
     color: white;
     }
 
-
-.caixinhaBotao {
-    display: flex;
-    justify-content: space-evenly;
-    
-}
 .boxBotao {
     display: flex;
     justify-content: center;
+}
+
+#btn_editar, #btn_deletar{
+    margin-left:  20px;
+}
+
+
+.caixinhaBotao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
 
 .card_erro {
