--- a/site/public/css/styleDashboard.css
+++ b/site/public/css/styleDashboard.css
@@ -38,6 +38,18 @@ body {
     background-color: #EBE2D2;
 }
 
+
+.imagemLogo {
+    width: 200px;
+   margin-top: 37px;
+   margin-left: 17px;
+}
+
+.tituloUsuario {
+    text-align: center;
+    padding: 16px; 
+}
+
 .border {
     border: 2px solid red;
 }
@@ -67,9 +79,10 @@ body {
 .sidebarMarrom p {
     color: white;
     font-family: 'Montserrat';
-    margin-top: 15px;
-    font-size: 20px
+    margin-top: -2px;
+    font-size: 18px;
 }
+
 
 .imagemPerfil {
     width: 170px;
