--- a/site/public/css/styleDiario.css
+++ b/site/public/css/styleDiario.css
@@ -67,8 +67,8 @@ body {
 .sidebarMarrom p {
     color: white;
     font-family: 'Montserrat';
-    margin-top: 15px;
-    font-size: 20px
+    margin-top: -2px;
+    font-size: 18px;
 }
 
 .imagemPerfil {
@@ -321,39 +321,36 @@ body {
     
 }
 
-.card_erro {
-	display: none;
-	background-color: rgba(0, 0, 0, 0.514);
+.boxMensagem {
+    display: none;
+    margin-left: 770px;
+    margin-top: 10px;
+}
+
+.imagemLogo {
+    width: 200px;
+   margin-top: 37px;
+   margin-left: 17px;
+}
+
+.tituloUsuario {
+    text-align: center;
+   padding: 16px; 
+}
+
+.cardMensagem {	    
+	background-color: #4c3827;
 	color: white;
-	width: 230px;
+	width: 240px;
+    height: 25px;
 	position: fixed;
 	border-radius: 4px;
-	border: #000000 1px solid;
 	padding: 10px;
 	margin-right: 10%;
 	font-family: 'Montserrat';
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
 }
 
-.card_erro #mensagem_erro {
-	font-weight: 500;
-	font-size: 13px;
-}
-
-.loading-div {	
-	width: 50px;
-	display: none;
-}
-
-.loading-div img {
-	height: 50px;
-	width: 50px;
-}
-
-#div_erros_login {
-	display: none
-}
-
-.alerta_erro {
-	display: flex;
-	justify-content: flex-end;
-}
