--- a/site/public/css/styleQuiz.css
+++ b/site/public/css/styleQuiz.css
@@ -34,20 +34,25 @@
     padding: 0px;
 }
 
-.link { 
+.link {
     text-decoration: none;
     color: white;
 }
 
+.container {
+    width: 350px;
+    height: 350px;
+}
+
 .imagemLogo {
     width: 200px;
-   margin-top: 37px;
-   margin-left: 17px;
+    margin-top: 37px;
+    margin-left: 17px;
 }
 
 .tituloUsuario {
     text-align: center;
-   padding: 16px; 
+    padding: 16px;
 }
 
 body {
@@ -150,7 +155,7 @@ body {
     font-family: 'Montserrat';
     font-size: 20px;
     padding: 20px;
-    
+
 }
 
 .BoxNovaEntrada {
@@ -215,8 +220,8 @@ body {
     margin-bottom: 15px;
     display: flex;
     justify-content: center;
-   
-    
+
+
 }
 
 .textoQuiz {
@@ -228,14 +233,14 @@ body {
     margin-bottom: 15px;
     display: flex;
     justify-content: center;
-   
-    
+
+
 }
 
 .boxImagemQuiz {
     display: flex;
     justify-content: center;
-   
+
 }
 
 .imagemQuiz {
@@ -254,7 +259,7 @@ body {
     border: none;
     border-radius: 10px;
     width: 100px;
-    height: 40px;   
+    height: 40px;
     background-color: #735944;
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
     color: white;
@@ -262,28 +267,28 @@ body {
 
 .boxBotao {
     display: flex;
-    justify-content: center;    
+    justify-content: center;
 }
 
-.deslogar > span {   
+.deslogar>span {
     display: flex;
     align-items: flex-end;
     height: 48px;
     padding: 0 16px 0 23px;
-    /* o padding alinhou os itens no centro */     
+    /* o padding alinhou os itens no centro */
 }
 
 .caixaDeslogar {
     cursor: pointer;
     color: white;
     font-family: 'Montserrat';
-    margin-left: 70px;     
+    margin-left: 70px;
     margin-top: 188px;
     padding: 0 16px 0 23px;
 
 }
 
-.boxQuiz { 
+.boxQuiz {
     text-align: center;
     margin-top: 85px;
     margin-left: 58px;
@@ -298,7 +303,8 @@ body {
     margin-top: 20px;
 
 }
-.sessaoQuiz{  
+
+.sessaoQuiz {
     font-size: 20px;
     height: 100px;
     font-family: 'Montserrat';
@@ -313,15 +319,27 @@ body {
     border: none;
     border-radius: 10px;
     width: 138px;
-    height: 40px;   
+    height: 40px;
     background-color: #735944;
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
     color: white;
 }
 
 .respostasQuiz {
-   height: 90px;   
+    height: 170px;
     font-family: 'Montserrat';
     font-size: 20px;
     text-align: center;
+}
+
+.resultadoQuiz {
+   
+    font-family: 'Montserrat';
+    font-size: 20px;
+    text-align: center;
+}
+
+
+.estilizacaoSwal .swal-text {
+    font-family: 'Montserrat';
 }
