--- a/site/public/css/styleQuiz.css
+++ b/site/public/css/styleQuiz.css
@@ -40,7 +40,7 @@
 }
 
 .container {
-    width: 350px;
+    width: 306px;
     height: 350px;
 }
 
@@ -169,8 +169,8 @@ body {
 
 .caixaNovaEntrada {
     background-color: #CBAB8B;
-    width: 800px;
-    height: 600px;
+    width: 815px;
+    height: 650px;
     margin-bottom: 40px;
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
 }
@@ -245,8 +245,8 @@ body {
 
 .imagemQuiz {
     margin: 15px;
-    width: 590px;
-    height: 350px;
+    width: 581px;
+    height: 316px;
     margin-bottom: 20px;
     margin-top: 0px;
     border-radius: 20px;
@@ -262,12 +262,13 @@ body {
     height: 40px;
     background-color: #735944;
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
-    color: white;
+    color: white;    
 }
 
 .boxBotao {
     display: flex;
     justify-content: center;
+    padding: 20px;
 }
 
 .deslogar>span {
@@ -323,6 +324,7 @@ body {
     background-color: #735944;
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
     color: white;
+    
 }
 
 .respostasQuiz {
@@ -332,14 +334,73 @@ body {
     text-align: center;
 }
 
-.resultadoQuiz {
-   
+.resultadoQuiz {   
     font-family: 'Montserrat';
     font-size: 20px;
     text-align: center;
+    margin-top: -74px;
 }
 
 
 .estilizacaoSwal .swal-text {
     font-family: 'Montserrat';
 }
+
+.container { 
+    display: flex;
+    margin-top: 43px;
+}
+
+.boxMensagem {
+    display: none;
+    margin-left: 770px;
+    margin-top: 10px;
+}
+
+.cardMensagem {	    
+	background-color: #d94040;
+	color: white;
+	width: 330px;
+    height: 40px;
+	position: fixed;
+	border-radius: 4px;
+	padding: 10px;
+	margin-right: 10%;
+	font-family: 'Montserrat';
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
+}
+
+input[type="radio"] {
+    /* Tornando quadrado */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    /* Definindo como quadrado branco */
+    background-color: #fff;
+    border: 2px solid #000;
+    border-radius: 0;
+    display: inline-block;
+    vertical-align: middle;
+    /* Mudando cor para marrom quando selecionado */
+    outline: none;
+  }
+  /* Mudando cor para marrom quando selecionado */
+  input[type="radio"]:checked {
+    background-color: rgb(82, 172, 60);
+  }
+  
+  /* Estilizando os labels dos radio buttons */
+  input[type="radio"] + label {
+    /* Estilizando o texto */
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    /* Ajustando margem para alinhar com os botões */
+    margin-left: 5px;
+    display: inline-block;
+    vertical-align: middle;
+  }
